Small updates on posts, add rules code

--- a/blog/2021-11-07-pixels.md
+++ b/blog/2021-11-07-pixels.md
@@ -1,6 +1,6 @@
 ---
 slug: pixels
-title: "Designing information, part 2: A pixel is not a little square"
+title: "A pixel is not a ◻"
 draft: true
 tags: [science popularization]
 ---
