Add timeliner page

--- a/blog/2021-11-07-pixels.md
+++ b/blog/2021-11-07-pixels.md
@@ -59,14 +59,14 @@ straightforward, so I won’t mention it from hereon.
 
 The little square model pretends to represent a pixel (picture element) as
 a geometric square. Thus pixel (i, j) is assumed to correspond to the area
-of the plane bounded by the square {(x, y) | i-.5 E x E i+.5, j-.5 E y E j+.5}.
+of the plane bounded by the square \{(x, y) | i-.5 E x E i+.5, j-.5 E y E j+.5\}.
 
 I have already, with this simple definition, entered the territory of
 controversy—a misguided (or at least irrelevant) controversy as I will
 attempt to show. There is typically an argument about whether the pixel
 “center” lies on the integers or the half-integers. The “half-integerists”
-would have pixel (i, j) correspond instead to the area of the plane {(x,
-y) | i £ x £ i+1., j £ y £ j+1.}.
+would have pixel (i, j) correspond instead to the area of the plane \{(x,
+y) | i £ x £ i+1., j £ y £ j+1.\}.
 
 See the little squares? Pixels would have edges and centers by this
 formulation.
@@ -259,8 +259,7 @@ manipulation, not as a 3D shape. And this is all what matters for future
 world building and simulation: data transformation. Voxels could be a
 strong basis for this, or not.
 
-The real future of video game for Ubisoft is not _voxels_ per se, it’s _data-oriented design_. Where data is
-the basis of the engine, where multiple simulations can run on the same
+The real future of video game for Ubisoft is not _voxels_ per se, it’s _data-oriented design_. Where data is the basis of the engine, where multiple simulations can run on the same
 set of data so you don’t need to manually create links between systems. I
 believe more in _this_ as the key to create complex intricate systems, not
 to modelize everything in the world as little cubes.
